# Magic-Media-Discord-Bot

./: Dockerfile  README.md  docker-compose.yaml  logging_config.json  pyproject.toml  videosegmenter
.github/workflows/: docker_image.yml  lint.yml  run.yml
mediamagic/: __main__.py  bot.py  checks.py  constants.py  exceptions.py
mediamagic/exts/: nsfw.py  record.py  upload.py
mediamagic/exts/backend/: delete_button_listener.py  error_handler.py
mediamagic/services/: adownloader.py  striplivecam.py  terabox.py  upload.py  videosegmenter.py
mediamagic/utils/: extensions.py  helper.py  messages.py
